fix/Replace gap property with margin

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -48,7 +48,6 @@ header{
 main{
     display: flex;
     justify-content: space-between;
-    gap: 20px;
     margin-bottom: 20px;
 }
 
